feat: atualização do ícone do app e ajustes de configuração

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
 
     <application
-        android:label="lembrei_pegar"
+        android:label="lembrei de pagar"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
