--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,66 +6,49 @@ publish_to: 'none' # Não publicar no pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2 # Verifique se esta versão é compatível com seu Flutter (rode flutter --version). Ajuste se necessário.
+  sdk: ^3.7.2
 
 dependencies:
   flutter:
     sdk: flutter
-  
-  # Plugins que você está usando
+
+  # Plugins
   android_alarm_manager_plus: ^4.0.7
-  firebase_messaging: ^14.9.4 # <--- ALTERADO PARA ESTA VERSÃO PARA RESOLVER CONFLITO
+  firebase_messaging: ^14.9.4
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
   uuid: ^4.0.0
-  google_fonts: ^6.1.0 # <-- Adicionado para usar fontes bonitas
-  collection: ^1.17.0 # Certifique-se de que esta linha está aqui (necessária para ReportsPage)
+  google_fonts: ^6.1.0
+  collection: ^1.17.0
 
-  # *** Dependências do Firebase com números de versão reais ***
-  firebase_core: ^2.28.0 # Versão recente verificada
-  cloud_firestore: ^4.17.0 # Versão recente verificada
+  # Firebase
+  firebase_core: ^2.28.0
+  cloud_firestore: ^4.17.0
   firebase_auth: ^4.19.5
 
-  # Notificações Locais - MOVIDO PARA DEPENDENCIES
+  # Notificações Locais
   flutter_local_notifications: ^17.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
-  flutter_launcher_icons: "^0.14.3"
-  # flutter_local_notifications foi movido para a seção dependencies
 
+  flutter_launcher_icons: ^0.14.3
   flutter_lints: ^5.0.0
 
-# A seção flutter define configurações específicas do Flutter.
 flutter:
   uses-material-design: true
 
-  # Para adicionar assets ao seu aplicativo, adicione uma seção assets, como esta:
+  # Se quiser usar outras imagens no app, ative:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # Um exemplo de adição de fontes personalizadas ao seu aplicativo:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  #   - assets/
 
-# Configurações para o plugin flutter_launcher_icons
+# Configuração do plugin flutter_launcher_icons
 flutter_icons:
-  android: true # Gera ícones para Android (pode ser "launcher_icon" ou true)
-  ios: true     # Gera ícones para iOS
-  image_path: "assets/icon/logo.png" # <<< MUDE AQUI para o caminho da sua imagem
-  min_sdk_android: 21 # Opcional: defina sua minSdkVersion do Android (se já não estiver no build.gradle)
-  # Para Ícones Adaptativos no Android (Oreo e superior) - Recomendado!
-  adaptive_icon_background: "#FFFFFF" # Ex: cor de fundo em hexadecimal (branco) ou caminho para uma imagem de fundo
-  adaptive_icon_foreground: "assets/icon/logo_foreground.png" # <<< Crie uma versão da sua logo APENAS com o elemento principal (sem fundo) para o foreground
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png" # Caminho atualizado da sua imagem
+  min_sdk_android: 21
+  # Para ícones adaptativos (opcional), descomente e crie um foreground separado:
+  # adaptive_icon_background: "#FFFFFF"
+  # adaptive_icon_foreground: "assets/icon/icon_foreground.png"
