--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   uuid: ^4.0.0
   google_fonts: ^6.1.0
   collection: ^1.17.0
+  image_picker: ^1.1.0
+  firebase_storage: ^11.7.7
 
   # Firebase
   firebase_core: ^2.28.0
